--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.7"
+env:
+  - MS_TEAMS_CONNECTOR = "dummy"
 install:
   - pip install -r requirements.txt
 script:
