--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ python:
 install:
   - pip install -r app/requirements.txt
 script:
-  - export MS_TEAMS_WEBHOOK="dummy"
-  - python -m unittest discover tests/
+  - cd tests/ && pytest
